// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Container should render Default 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,9 +19,28 @@
            r="50"
          />
        </svg>
        <nav
          class="css-1svnta4-FooterLinks enubu9x0"
-       />
+       >
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/"
+         >
+           Home
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/a/impressum"
+         >
+           Impressum
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="https://google.com"
+         >
+           FAQ
+         </a>
+       </nav>
      </div>
    </footer>
  </DocumentFragment>"
`;

exports[`Footer Container should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <footer
-     class="css-5rtvk-FooterWrapper enubu9x2"
+     class="extra-classname css-5rtvk-FooterWrapper enubu9x2"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg enubu9x1 css-1iuxm26-MuiContainer-root-FooterInnerWrapper"
      >
        <svg
@@ -19,9 +19,28 @@
            r="50"
          />
        </svg>
        <nav
          class="css-1svnta4-FooterLinks enubu9x0"
-       />
+       >
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/"
+         >
+           Home
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/a/impressum"
+         >
+           Impressum
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="https://google.com"
+         >
+           FAQ
+         </a>
+       </nav>
      </div>
    </footer>
  </DocumentFragment>"
`;

exports[`Footer Container should render WithEmotion 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,9 +19,28 @@
            r="50"
          />
        </svg>
        <nav
          class="css-1svnta4-FooterLinks enubu9x0"
-       />
+       >
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/"
+         >
+           Home
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="/a/impressum"
+         >
+           Impressum
+         </a>
+         <a
+           class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
+           href="https://google.com"
+         >
+           FAQ
+         </a>
+       </nav>
      </div>
    </footer>
  </DocumentFragment>"
`;
